--- a/style.css
+++ b/style.css
@@ -37,26 +37,49 @@ li.manifest-item.selected {
   /*background-color: var(--main-bg);*/
   background: rgba(100, 100, 100, .8);
   left: 0; top: 0;
-  width: 100vw; height: 100vh;
+  box-sizing: border-box;
+  width: 100%; height: 100vh;
   position: fixed;
   z-index: 2;
   padding: 1em;
   overflow: auto;
 }
 
+.anim-box.init {
+  transform: translateX(-100%);
+  opacity: 0;
+}
+
 .anim-box.slidein {
   animation: slideIn 1s cubic-bezier(0.25, 1, 0.5, 1) 1 forwards;
 }
 
+.anim-box.slideout {
+  animation: slideOut 1s cubic-bezier(0.25, 1, 0.5, 1) 1 forwards;
+}
+
 @keyframes slideIn {
   0% {
-    transform: translateX(-100vw);
+    transform: translateX(-100%);
     opacity: 0;
   }
   100% {
     transform: translateX(0);
   }
   40%, 100% {
+    opacity: 1;
+  }
+}
+
+@keyframes slideOut {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  0%, 40% {
     opacity: 1;
   }
 }
