--- a/style.css
+++ b/style.css
@@ -16,6 +16,15 @@ body {
   background: linear-gradient(to right, #362ae0 0%, #3b79cc 50%, #42d3ed 100%);
 }
 
+div#radio {
+  text-align: center;
+}
+
+button#channels {
+  position: fixed;
+  z-index: 10;
+}
+
 span#ch-number {
   font-size: xx-large;
 }
@@ -28,7 +37,11 @@ ul {
   list-style: none;
 }
 
-li.manifest-item.selected {
+div#manifests {
+  margin-top: 1em;
+}
+
+div.manifest-item.selected {
   background-color: #3b79cc;
   color: #EEEEEE;
 }
@@ -41,8 +54,9 @@ li.manifest-item.selected {
   width: 100%; height: 100vh;
   position: fixed;
   z-index: 2;
-  padding: 1em;
-  overflow: auto;
+  padding: 1em 1em 0em 3.5em;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .anim-box.init {
