--- a/style.css
+++ b/style.css
@@ -20,11 +20,6 @@ div#radio {
   text-align: center;
 }
 
-button#channels {
-  position: fixed;
-  z-index: 10;
-}
-
 span#ch-number {
   font-size: xx-large;
 }
@@ -54,7 +49,7 @@ div.manifest-item.selected {
   width: 100%; height: 100vh;
   position: fixed;
   z-index: 2;
-  padding: 1em 1em 0em 3.5em;
+  padding: 1em 1em 0em 4em;
   overflow-x: hidden;
   overflow-y: auto;
 }
@@ -96,4 +91,66 @@ div.manifest-item.selected {
   0%, 40% {
     opacity: 1;
   }
+}
+
+div#channels {
+  position: fixed;
+  z-index: 10;
+}
+
+.openbtn {
+  position: relative;
+  background: #666;
+  cursor: pointer;
+  width: 50px;
+  height: 50px;
+  border-radius: 5px;
+}
+
+.openbtn span {
+  display: inline-block;
+  transition: all .4s;
+  position: absolute;
+}
+
+.openbtn span:nth-of-type(1),
+.openbtn span:nth-of-type(3) {
+  height: 2px;
+  background: #fff;
+  width: 62%;
+  left: 10px;
+}
+
+.openbtn span:nth-of-type(1) {
+  top: 13px;
+}
+
+.openbtn span:nth-of-type(2) {
+  top: 19px;
+  left: 11px;
+  font-size: 0.7rem;
+  text-align: center;
+  color: #fff;
+}
+
+.openbtn span:nth-of-type(3) {
+  top: 36px;
+}
+
+.openbtn.active span:nth-of-type(1) {
+  top: 18px;
+  left: 18px;
+  transform: translateY(6px) rotate(-45deg);
+  width: 30%;
+}
+
+.openbtn.active span:nth-of-type(2) {
+  opacity: 0;
+}
+
+.openbtn.active span:nth-of-type(3) {
+  top: 30px;
+  left: 18px;
+  transform: translateY(-6px) rotate(45deg);
+  width: 30%;
 }
