--- a/style.css
+++ b/style.css
@@ -16,12 +16,34 @@ body {
   background: linear-gradient(to right, #362ae0 0%, #3b79cc 50%, #42d3ed 100%);
 }
 
+div#controler {
+  left: 0; top: 0;
+  box-sizing: border-box;
+  width: 100%;
+  height: 97vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.changebtn {
+  height: 95%;
+  width: 30%;
+  font-size: 15vmin;
+  background: rgba(100, 100, 100, .3);
+}
+
+div#indicator {
+  width: 38%;
+  text-align: center;
+}
+
 div#radio {
   text-align: center;
 }
 
 span#ch-number {
-  font-size: xx-large;
+  font-size: 15vmin;
 }
 
 div#radio {
